---
source: lambc_parse/src/parse.rs
expression: parser.parse_module()
---
Ok(
    Module {
        exports: [],
        imports: [
            Import {
                file: "my-path",
                name: None,
                items: [],
                star: true,
                span: Span {
                    start: 13,
                    end: 37,
                },
                path_span: Span {
                    start: 18,
                    end: 27,
                },
            },
        ],
        items: [
            Def(
                Define {
                    ident: Ident {
                        raw: "_",
                        span: Span {
                            start: 54,
                            end: 55,
                        },
                    },
                    typ: None,
                    value: Binary(
                        Binary {
                            lhs: Call(
                                Call {
                                    callee: Ident(
                                        Ident {
                                            raw: "call",
                                            span: Span {
                                                start: 59,
                                                end: 63,
                                            },
                                        },
                                    ),
                                    args: [
                                        FnDef(
                                            FnDef {
                                                args: [
                                                    Ident {
                                                        raw: "x",
                                                        span: Span {
                                                            start: 67,
                                                            end: 68,
                                                        },
                                                    },
                                                ],
                                                body: Ident(
                                                    Ident {
                                                        raw: "x",
                                                        span: Span {
                                                            start: 73,
                                                            end: 74,
                                                        },
                                                    },
                                                ),
                                                recursive: false,
                                                span: Span {
                                                    start: 64,
                                                    end: 74,
                                                },
                                            },
                                        ),
                                        I64(
                                            I64Lit {
                                                base: Dec,
                                                value: "1",
                                                span: Span {
                                                    start: 76,
                                                    end: 77,
                                                },
                                            },
                                        ),
                                    ],
                                    span: Span {
                                        start: 59,
                                        end: 78,
                                    },
                                },
                            ),
                            op: Appr,
                            rhs: Ident(
                                Ident {
                                    raw: "println",
                                    span: Span {
                                        start: 82,
                                        end: 89,
                                    },
                                },
                            ),
                            span: Span {
                                start: 59,
                                end: 89,
                            },
                            op_span: Span {
                                start: 79,
                                end: 81,
                            },
                        },
                    ),
                    span: Span {
                        start: 50,
                        end: 90,
                    },
                },
            ),
        ],
        path: "",
        span: Span {
            start: 0,
            end: 103,
        },
    },
)
